<resources>
    <string name="app_name">定联管理系统</string>
    <string name="subtitle">保险客户的定期联系管理</string>
    <string name="search_hint">搜索……</string>
    <string name="manage">管理</string>
    <string name="track">跟踪</string>
    <string name="sign">签单</string>
    <string name="statistics">统计</string>
    <string name="settings">设置</string>
    <string name="add">添加</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="password_title">设置数据库密码</string>
    <string name="password_hint">请输入密码</string>
    <string name="password_warning">密码很重要，忘记可能导致数据丢失，请牢记！</string>
    <string name="remember_password">记住密码</string>
    <string name="customer_name">客户姓名</string>
    <string name="phone">电话</string>
    <string name="wechat">微信</string>
    <string name="address">现居地址</string>
    <string name="level">客户等级</string>
    <string name="need">客户需求</string>
    <string name="status">跟进状态</string>
    <string name="remark">客户备注</string>
    <string name="follow_date">跟进日期</string>
    <string name="follow_record">跟进记录</string>
    <string name="follow_method">跟进方式</string>
    <string name="follow_result">跟进结果</string>
    <string name="follow_remark">跟进备注</string>
    <string name="sign_date">签约日期</string>
    <string name="contract_code">合同编码</string>
    <string name="product_name">产品名称</string>
    <string name="contract_amount">合同金额</string>
    <string name="paid_amount">支付金额</string>
    <string name="remaining_amount">剩余金额</string>
    <string name="sign_person">签约人</string>
    <string name="sign_remark">签约备注</string>
    <string name="level_a">A级</string>
    <string name="level_b">B级</string>
    <string name="level_c">C级</string>
    <string name="level_d">D级</string>
    <string name="status_contacting">接触中</string>
    <string name="status_promoting">促成中</string>
    <string name="status_signed">已签单</string>
    <string name="status_gaveup">已放弃</string>
    <string name="method_wechat">微信</string>
    <string name="method_visit">上门</string>
    <string name="method_phone">电话</string>
    <string name="method_sms">短信</string>
    <string name="method_email">邮箱</string>
    <string name="method_other">其他</string>
    <string name="data_settings">数据</string>
    <string name="help_settings">帮助</string>
    <string name="font_size">字体大小</string>
    <string name="change_password">修改密码</string>
    <string name="import_data">导入数据</string>
    <string name="export_data">导出数据</string>
    <string name="clear_data">全部清除</string>
    <string name="help_doc">帮助文档</string>
    <string name="feedback">反馈建议</string>
    <string name="about">关于</string>
    <string name="version">版本 1.0</string>
    <string name="check_update">检查更新</string>
    <string name="reminder_title">客户联系提醒</string>
    <string name="reminder_text">有 %d 位客户需要今天联系</string>
    <string name="splash_text1">定联管理系统</string>
    <string name="splash_text2">新华保险 司马君</string>
    <string name="splash_text3">®基于张瀞心《定联》开发</string>
</resources>
